--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
 repositories {
@@ -8,14 +8,14 @@ repositories {
 }
 
 dependencies {
-    // JavaFX dependencies
     implementation 'org.openjfx:javafx-controls:17'
-    implementation 'org.openjfx:javafx-web:17'  // Ensure this is included
+    implementation 'org.openjfx:javafx-fxml:17'
+    implementation 'org.jsoup:jsoup:1.15.3'
 }
 
 javafx {
     version = "17"
-    modules = [ 'javafx.controls', 'javafx.web' ]
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
 }
 
 application {
@@ -35,7 +35,7 @@ jar {
 
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
-    // Add icon resource to the JAR
+    // Add resources to the JAR
     from('src/resources') {
         into('')
     }
